# iata-task

./: .gitignore  README.md  airport_data.jsonl  airport_data_full.jsonl  carrier_data.jsonl  carrier_data_full.jsonl  fetch_state.jsonl  pyproject.toml
.github/workflows/: monthly_data_fetch.yml  pylint.yml
iata_code_fetcher/: api.py  fetcher.py
tests/: test_api.py  test_fetcher.py
