[project]
name = "iata-code-fetcher"
version = "0.1.0"
description = "A Python project to scrape and process airline and airport code data from IATA's website using requests and BeautifulSoup4. The project saves data in JSONL format."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "beautifulsoup4>=4.12.3,<5.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.scripts]
iata-fetch = "iata_code_fetcher.fetcher:main"
iata-api = "iata_code_fetcher.api:main"

[dependency-groups]
dev = [
    "pylint>=3.1.0,<4.0.0",
    "pytest>=8.2.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
